2018-09-03  Jens Hauke  <hauke@par-tec.com>	-	5.2.6-1

	* Fix: con: "pscom_con.c:208: _pscom_con_cleanup: Assertion `con->magic
	== MAGIC_CONNECTION' failed." (connection cleanup)

	* Fix: con: "pscom_con.c:331: pscom_con_error_io_done: Assertion
	`con->magic == MAGIC_CONNECTION' failed." (connection cleanup)

	* Fix: precon: "pscom_precon.c:627: pscom_precon_check_end:
	Assertion `pre->magic == MAGIC_PRECON' failed." (error handling on
	noisy IP networks)

	* Fix: PSM2: "pscom4psm/pspsm.c:459: pspsm_process: Assertion
	`status->msg_length == status->nbytes' failed." (truncated
	xheader)

	* Workaround: PSM2: Segfault in psm2_ep_close (psm2 connection
	cleanup)

2018-07-27  Jens Hauke  <hauke@par-tec.com>	-	5.2.5-1

	* Enhancement: TCP connects: Recover from more network errors

	* Enhancement: "test_nodes {masternode}" startable by mpiexec/srun

2018-07-18  Jens Hauke  <hauke@par-tec.com>	-	5.2.5-0rc2

	* Fix: Error handling on failing connections (Segfault after
	"connection refused" and "Network unreachable"

	* Enhancement: Increase default: PSP_READAHEAD=350

2018-07-16  Jens Hauke  <hauke@par-tec.com>	-	5.2.5-0rc1

	* Fix: heap corruption at first connect

2018-07-10  Carsten Clauss <clauss@par-tec.com>

	* psmalloc: support for the PSCOM_ALLIN case

2018-07-09  Jens Hauke  <hauke@par-tec.com>	-	5.2.4-1

	* Enhancement: At connection startup, recover from ECONNRESET
	errors (improve scaling).

	* Fix: Error handling for failing ondemand connections (fix double
	cleanup in case of on error).

	* Fix: Error handling for the non-ondemand case if no usable
	plugin can be found (e.g. PSP_TCP=0).

	* Fix: PSM2: clean disconnect of psm2 connections. (requires
	libpsm >= PSM2_10.2-260).

2018-05-07  Jens Hauke  <hauke@par-tec.com>	-	5.2.3-1

	* Fix: UCP: pscom4ucp: Increased space for ucp_address_t endpoint
	address (Supporting ucx >= 1.3.0-1)

2018-04-03  Jens Hauke  <hauke@par-tec.com>	-	5.2.2-1

	* Enhancement: Increase PSCOM_MAX_UFDS.
